--- a/templates/chat/client/index.html
+++ b/templates/chat/client/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="css/animate.css">
     <link rel="stylesheet" href="css/bootstrap.min.css">
     <link rel="stylesheet" href="css/app.css">
-    <title>Baresoil Basic</title>
+    <title>Baresoil Demo Chat</title>
   </head>
   <body ng-app="app">
     <div class="container-fluid" ng-controller="MainCtrl as main">
