--- a/templates/martinet/client/src/style.less
+++ b/templates/martinet/client/src/style.less
@@ -3,7 +3,7 @@
 @import '~bootstrap/less/bootstrap.less';
 
 body {
-  background-color: #dedede;
+  background-color: white;
 
   // Less is a superset of CSS that allows nesting of styles.
   h1 {
